--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@babel/preset-react": "^7.7.4",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^1.7.2",
+    "http-proxy-middleware": "^0.20.0"
   },
   "dependencies": {
     "axios": "^0.19.0",
